tests/baselines/reference/optionalPropertiesSyntax(strict=true).errors.txt
optionalPropertiesSyntax.ts(4,5): error TS2386: Overload signatures must all be optional or required.
optionalPropertiesSyntax.ts(11,5): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
optionalPropertiesSyntax.ts(11,7): error TS1005: ';' expected.
optionalPropertiesSyntax.ts(11,8): error TS1131: Property or signature expected.
optionalPropertiesSyntax.ts(11,10): error TS7008: Member 'any' implicitly has an 'any' type.
optionalPropertiesSyntax.ts(12,5): error TS1131: Property or signature expected.
optionalPropertiesSyntax.ts(18,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
optionalPropertiesSyntax.ts(18,11): error TS1005: ';' expected.
optionalPropertiesSyntax.ts(18,12): error TS1131: Property or signature expected.
optionalPropertiesSyntax.ts(18,14): error TS7008: Member 'any' implicitly has an 'any' type.
optionalPropertiesSyntax.ts(24,5): error TS2300: Duplicate identifier 'prop'.
optionalPropertiesSyntax.ts(24,5): error TS2687: All declarations of 'prop' must have identical modifiers.
optionalPropertiesSyntax.ts(25,5): error TS2300: Duplicate identifier 'prop'.
optionalPropertiesSyntax.ts(25,5): error TS2687: All declarations of 'prop' must have identical modifiers.
optionalPropertiesSyntax.ts(31,5): error TS2374: Duplicate index signature for type 'number'.
optionalPropertiesSyntax.ts(32,5): error TS2374: Duplicate index signature for type 'number'.
optionalPropertiesSyntax.ts(32,18): error TS1005: ';' expected.
optionalPropertiesSyntax.ts(32,19): error TS1131: Property or signature expected.
optionalPropertiesSyntax.ts(32,21): error TS7008: Member 'any' implicitly has an 'any' type.
optionalPropertiesSyntax.ts(33,5): error TS1131: Property or signature expected.
optionalPropertiesSyntax.ts(33,7): error TS2374: Duplicate index signature for type 'number'.
optionalPropertiesSyntax.ts(34,5): error TS2374: Duplicate index signature for type 'number'.


==== optionalPropertiesSyntax.ts (22 errors) ====
    interface fnSigs {
        //functions signatures can be optional
        fn(): void;
        fn?(): void; //err
        ~~
!!! error TS2386: Overload signatures must all be optional or required.
        fn2?(): void;
    }
    
    interface callSig {
        //Call signatures can't be optional
        (): any;
        ()?: any; //err
        ~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
          ~
!!! error TS1005: ';' expected.
           ~
!!! error TS1131: Property or signature expected.
             ~~~
!!! error TS7008: Member 'any' implicitly has an 'any' type.
        ?(): any; //err
        ~
!!! error TS1131: Property or signature expected.
    }
    
    interface constructSig {
        //Construct signatures can't be optional
        new (): any;
        new ()?: any; //err
        ~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
              ~
!!! error TS1005: ';' expected.
               ~
!!! error TS1131: Property or signature expected.
                 ~~~
!!! error TS7008: Member 'any' implicitly has an 'any' type.
        new ?(): any; //err
    }
    
    interface propertySig {
        //Property signatures can be optional
        prop: any;
        ~~~~
!!! error TS2300: Duplicate identifier 'prop'.
        ~~~~
!!! error TS2687: All declarations of 'prop' must have identical modifiers.
        prop?: any;
        ~~~~
!!! error TS2300: Duplicate identifier 'prop'.
        ~~~~
!!! error TS2687: All declarations of 'prop' must have identical modifiers.
        prop2?: any;
    }
    
    interface indexSig {
        //Index signatures can't be optional
        [idx: number]: any;
        ~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
        [idx: number]?: any; //err
        ~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
                     ~
!!! error TS1005: ';' expected.
                      ~
!!! error TS1131: Property or signature expected.
                        ~~~
!!! error TS7008: Member 'any' implicitly has an 'any' type.
        ? [idx: number]: any; //err
        ~
!!! error TS1131: Property or signature expected.
          ~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
        [idx?: number]: any; //err
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'number'.
    }